# neuroprime

./: .gitignore  .gitmodules  LICENSE  README.md  setup.py  start_neuroprime_jupyterlab.bat  tutorial.ipynb  tutorial.rst
TODO/: README_v2.md  tutorial.md
batch/: start_neuroprime_jupyterlab.bat
neuroprime/: __init__.py
neuroprime.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
neuroprime/modules/LSL-BrainVisionRDA/: .gitignore  CMakeLists.txt  README.md  appveyor.yml  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h
neuroprime/modules/LSL-BrainVisionRDA/BrainVisionRDA/: BrainVisionRDA.sln  BrainVisionRDA.vcxproj  BrainVisionRDA.vcxproj.filters
neuroprime/modules/LSL-BrainVisionRDA/release/: moc_mainwindow.cpp
neuroprime/modules/LSL-actiCHamp/: ActiChamp2010.vcxproj.filters  ActiChamp_x86.lib  README.md  README.txt  moc_mainwindow.cpp  vc100.idb
neuroprime/modules/pyff/doc/: conf.py
neuroprime/sampledata/: __init__.py
neuroprime/sampledata/e2_sample/: EG_S001_REST_ss01_b01_08102019_14h13m_rest_1.marker
neuroprime/src/: README.txt  initbciclass.py  start_gui.bat  start_gui.py  tutorial.rst
neuroprime/src/.spyproject/: workspace.ini
neuroprime/src/batchs/: ActiCHamp_config.cfg  README.txt  acticap_10_20_old_design.cfg  brainvision_config.cfg  pycorder_config.xml  start_bci_simulate.bat  start_bci_windows.bat  start_eeg_simulate.bat  start_gsr_hr_simulate.bat  start_lsl_actichamp.bat  start_lsl_bva_rda.bat  start_pycorder.bat  start_pyff_mac_os.sh  start_pyff_windows.bat
neuroprime/src/brain_interfaces/: testclass.ipynb  testclass.py
neuroprime/src/signal_acquisition/: mushu_patch.py  test_data.py  test_mushu_patch.py
neuroprime/src/signal_presentation/: test_pres_control.py  test_pygame.py
neuroprime/src/signal_processing/: eegfunctions.py  eegpipeline.py  nftalgorithm.py
neuroprime/src/utils/: myfunctions.py
neuroprime/stimulus/: sites_downloaded.txt
requirements/: requirements.txt
requirements/conda/: how_to_windows11.txt  macOS.yml  windows.yml  windows_2.yml
(+76 files in other folders)
